--- a/VRChat/19/1337219.html
+++ b/VRChat/19/1337219.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "MWgWR9d7qTKaaK94dl1Pr9eyv7saoivttBFS8TATg2g="></script>
+    "BUCwLBtctSnNAJKzDBOoCtAiVxoH1hWUMR5YNX0BEZ0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChatModeSwitcher","description":"・コレは何？\nVRChatのホームページやURL経由でVRChatのインスタンスにJoinするとき、VR HMDが接続されているとVRモードで起動してしまいます。\n本プログラムはVR HMDが接続されていてもデスクトップモードで起動するかVRモードで起動するか選べるようにするためのプログラムです。\n\n・使い方\n同梱してある「ReadMe　最初に読んでください」を読んでください。\n\nOS : Windows 7 SP1以降\n使用ライブラリ : .NET Framework 4.7.2\n\n実はソースコードが公開されておるのじゃよ\nhttps://github.com/HinanoAira/VRChatModeSwitcher\n\n利用規約\n本ソフトウェアはMIT Licenseを適用しております。\n詳しくはLICENSE(Original)を確認してください\nなお、LICENSE(日本語訳)はMIT Licenseの理解を助けるための物であり、各ライセンスを適用した文書の頒布条件を法的に有効な形で述べたものではありません。\nまた、LICENSE(日本語訳)の文章は https://github.com/opensource-jp/licensesよりCC-BY 4.0 License に基づき引用したものであり、著作権は 佐渡 秀治 様、朝田 環 様に帰属します。\n\n変更履歴\n\n2022/07/26 - Ver1.4配布 EasyAntiCheat対応\n2021/06/18 - Ver1.3配布 プロファイル機能追加\n2021/06/15 - Ver1.2配布 追加の引数を設定できる機能を追加\n2021/05/14 - Ver1.1配布 VRChatの仕様変更に対応\n2019/10/19 - １から作り直し機能の変更なし\n　　　　　　　アプリ名変更 Ver1.0へ\n　　　　　　　使用ライブラリのバージョンを4.7.2に\n\n2019/04/29 - Ver1.0.1配布 ローカルテスト時の複数起動機能追加\n2019/04/29 - Ver1.0配布","url":"https://booth.pm/ja/items/1337219","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/c5555578-9638-4b85-b4f7-68c32f2dcc57/i/1337219/a8633d16-0de1-4b22-ad4e-9c9103ef96ac_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="MWgWR9d7qTKaaK94dl1Pr9eyv7saoivttBFS8TATg2g="></script>
+    nonce="BUCwLBtctSnNAJKzDBOoCtAiVxoH1hWUMR5YNX0BEZ0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -718,7 +718,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
